Bug 506562 - Plasma crashed inTaskManager::TaskGroupingProxyModel::data() after a game crashed
Summary: Plasma crashed inTaskManager::TaskGroupingProxyModel::data() after a game cra...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.4.1
Platform: Fedora RPMs Linux
: VHI crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 508245 513631 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-04 00:42 UTC by Erika
Modified: 2026-01-24 04:27 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/221251/


Attachments
New crash information added by DrKonqi (170.08 KB, text/plain)
2025-07-04 00:42 UTC, Erika
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erika 2025-07-04 00:42:32 UTC
Application: plasmashell (6.4.1)

ApplicationNotResponding [ANR]: false
Qt Version: 6.9.1
Frameworks Version: 6.15.0
Operating System: Linux 6.15.4-cachyos1.fc42.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 42 (KDE Plasma Desktop Edition)"
DrKonqi: 6.4.1 [CoredumpBackend]

-- Information about the crash:
I was playing a Wine game that got non-responsive (it happens often) and I decided to force-close it. Then Plasma crashed.

The crash can be reproduced sometimes.

-- Backtrace (Reduced):
#5  QConcatenateTablesProxyModel::index (this=0x55b5f32feaf0, row=5, column=0, parent=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qconcatenatetablesproxymodel.cpp:294
#6  0x00007f4dd85d6bba in QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:562
#7  QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:547
#8  0x00007f4dd85d6f22 in QSortFilterProxyModel::mapToSource (this=<optimized out>, proxyIndex=...) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:3281
#9  QSortFilterProxyModel::data (this=<optimized out>, index=..., role=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2219
#10 0x00007f4d812c8f08 in QModelIndex::data (this=this@entry=0x7fffc64adb40, arole=arole@entry=257) at /usr/include/qt6/QtCore/qabstractitemmodel.h:518
#11 0x00007f4d812cea47 in TaskManager::TaskGroupingProxyModel::data (this=<optimized out>, proxyIndex=<optimized out>, role=<optimized out>) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/taskgroupingproxymodel.cpp:748
#12 0x00007f4dd85d6fca in QSortFilterProxyModel::data (this=this@entry=0x55b5f3b012c0, index=..., role=role@entry=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2222
#13 0x00007f4d812d6367 in TaskManager::TasksModel::data (this=0x55b5f3b012c0, proxyIndex=<optimized out>, role=257) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/tasksmodel.cpp:1078
#14 0x00007f4dd858bad6 in QAbstractItemModel::qt_static_metacall (_o=_o@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:504
#15 0x00007f4dd85967ba in QAbstractItemModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:644
#16 0x00007f4dd85bcd2e in QAbstractProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractproxymodel.cpp:202
#17 0x00007f4dd85ea93e in QSortFilterProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qsortfilterproxymodel.cpp:264
#18 0x00007f4d812e79fe in TaskManager::TasksModel::qt_metacall (this=0x55b5f3b012c0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffc64ae268) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/redhat-linux-build/libtaskmanager/taskmanager_autogen/include/moc_tasksmodel.cpp:682
#19 0x00007f4dd9935782 in QQmlObjectOrGadget::metacall (this=this@entry=0x7fffc64ae550, type=type@entry=QMetaObject::InvokeMetaMethod, index=<optimized out>, index@entry=42, argv=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/qml/qqmlobjectorgadget.cpp:14
#20 0x00007f4dd97be0b3 in QV4::CallMethod (object=..., index=<optimized out>, returnType=..., argCount=<optimized out>, argTypes=<optimized out>, engine=<optimized out>, callArgs=<optimized out>, callType=<optimized out>) at /usr/include/qt6/QtCore/qvarlengtharray.h:89
#5  QConcatenateTablesProxyModel::index (this=0x55b5f32feaf0, row=5, column=0, parent=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qconcatenatetablesproxymodel.cpp:294
#6  0x00007f4dd85d6bba in QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:562
#7  QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:547
#8  0x00007f4dd85d6f22 in QSortFilterProxyModel::mapToSource (this=<optimized out>, proxyIndex=...) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:3281
#9  QSortFilterProxyModel::data (this=<optimized out>, index=..., role=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2219
#10 0x00007f4d812c8f08 in QModelIndex::data (this=this@entry=0x7fffc64adb40, arole=arole@entry=257) at /usr/include/qt6/QtCore/qabstractitemmodel.h:518
#11 0x00007f4d812cea47 in TaskManager::TaskGroupingProxyModel::data (this=<optimized out>, proxyIndex=<optimized out>, role=<optimized out>) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/taskgroupingproxymodel.cpp:748
#12 0x00007f4dd85d6fca in QSortFilterProxyModel::data (this=this@entry=0x55b5f3b012c0, index=..., role=role@entry=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2222
#13 0x00007f4d812d6367 in TaskManager::TasksModel::data (this=0x55b5f3b012c0, proxyIndex=<optimized out>, role=257) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/tasksmodel.cpp:1078
#14 0x00007f4dd858bad6 in QAbstractItemModel::qt_static_metacall (_o=_o@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:504
#15 0x00007f4dd85967ba in QAbstractItemModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:644
#16 0x00007f4dd85bcd2e in QAbstractProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractproxymodel.cpp:202
#17 0x00007f4dd85ea93e in QSortFilterProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qsortfilterproxymodel.cpp:264
#18 0x00007f4d812e79fe in TaskManager::TasksModel::qt_metacall (this=0x55b5f3b012c0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffc64ae268) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/redhat-linux-build/libtaskmanager/taskmanager_autogen/include/moc_tasksmodel.cpp:682
#19 0x00007f4dd9935782 in QQmlObjectOrGadget::metacall (this=this@entry=0x7fffc64ae550, type=type@entry=QMetaObject::InvokeMetaMethod, index=<optimized out>, index@entry=42, argv=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/qml/qqmlobjectorgadget.cpp:14
#20 0x00007f4dd97be0b3 in QV4::CallMethod (object=..., index=<optimized out>, returnType=..., argCount=<optimized out>, argTypes=<optimized out>, engine=<optimized out>, callArgs=<optimized out>, callType=<optimized out>) at /usr/include/qt6/QtCore/qvarlengtharray.h:89


Reported using DrKonqi
Comment 1 Erika 2025-07-04 00:42:33 UTC
Created attachment 182923 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 TraceyC 2025-07-07 22:08:12 UTC
Searchable backtrace

Thread 1 (Thread 0x7f4dd23ab300 (LWP 2305)):
[KCrash Handler]
#5  QConcatenateTablesProxyModel::index (this=0x55b5f32feaf0, row=5, column=0, parent=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qconcatenatetablesproxymodel.cpp:294
#6  0x00007f4dd85d6bba in QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:562
#7  QSortFilterProxyModelPrivate::proxy_to_source (this=<optimized out>, proxy_index=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:547
#8  0x00007f4dd85d6f22 in QSortFilterProxyModel::mapToSource (this=<optimized out>, proxyIndex=...) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:3281
#9  QSortFilterProxyModel::data (this=<optimized out>, index=..., role=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2219
#10 0x00007f4d812c8f08 in QModelIndex::data (this=this@entry=0x7fffc64adb40, arole=arole@entry=257) at /usr/include/qt6/QtCore/qabstractitemmodel.h:518
#11 0x00007f4d812cea47 in TaskManager::TaskGroupingProxyModel::data (this=<optimized out>, proxyIndex=<optimized out>, role=<optimized out>) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/taskgroupingproxymodel.cpp:748
#12 0x00007f4dd85d6fca in QSortFilterProxyModel::data (this=this@entry=0x55b5f3b012c0, index=..., role=role@entry=257) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/src/corelib/itemmodels/qsortfilterproxymodel.cpp:2222
#13 0x00007f4d812d6367 in TaskManager::TasksModel::data (this=0x55b5f3b012c0, proxyIndex=<optimized out>, role=257) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/libtaskmanager/tasksmodel.cpp:1078
#14 0x00007f4dd858bad6 in QAbstractItemModel::qt_static_metacall (_o=_o@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:504
#15 0x00007f4dd85967ba in QAbstractItemModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=38, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractitemmodel.cpp:644
#16 0x00007f4dd85bcd2e in QAbstractProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qabstractproxymodel.cpp:202
#17 0x00007f4dd85ea93e in QSortFilterProxyModel::qt_metacall (this=this@entry=0x55b5f3b012c0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=_a@entry=0x7fffc64ae268) at /usr/src/debug/qt6-qtbase-6.9.1-1.fc42.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qsortfilterproxymodel.cpp:264
#18 0x00007f4d812e79fe in TaskManager::TasksModel::qt_metacall (this=0x55b5f3b012c0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffc64ae268) at /usr/src/debug/plasma-workspace-6.4.1-2.fc42.x86_64/redhat-linux-build/libtaskmanager/taskmanager_autogen/include/moc_tasksmodel.cpp:682
#19 0x00007f4dd9935782 in QQmlObjectOrGadget::metacall (this=this@entry=0x7fffc64ae550, type=type@entry=QMetaObject::InvokeMetaMethod, index=<optimized out>, index@entry=42, argv=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/qml/qqmlobjectorgadget.cpp:14
#20 0x00007f4dd97be0b3 in QV4::CallMethod (object=..., index=<optimized out>, returnType=..., argCount=<optimized out>, argTypes=<optimized out>, engine=<optimized out>, callArgs=<optimized out>, callType=<optimized out>) at /usr/include/qt6/QtCore/qvarlengtharray.h:89
#21 QV4::QObjectMethod::callPrecise (object=..., data=<optimized out>, engine=<optimized out>, engine@entry=0x55b5f1131240, callArgs=<optimized out>, callArgs@entry=0x7f4da2ed35d8, callType=callType@entry=QMetaObject::InvokeMetaMethod) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:2076
#22 0x00007f4dd97c0991 in operator() (__closure=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:3078
#23 operator()<QV4::QObjectMethod::callInternal(const QV4::Value*, const QV4::Value*, int) const::<lambda()> > (__closure=<synthetic pointer>, call=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:3055
#24 QV4::QObjectMethod::callInternal (this=<optimized out>, thisObject=0x7f4da2ed3578, argv=0x7f4da2ed3590, argc=2) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:3078
#25 0x00007f4dd97e94a5 in QV4::FunctionObject::call (this=0x7fffc64ae618, thisObject=0x7f4da2ed3578, argv=0x7f4da2ed3590, argc=2) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4functionobject_p.h:187
#26 QV4::Runtime::CallPropertyLookup::call (engine=0x55b5f1131240, base=..., index=<optimized out>, argv=0x7f4da2ed3590, argc=2) at /usr/src/debug/qt6-qtdeclarative-6.9.1-2.fc42.x86_64/src/qml/jsruntime/qv4runtime.cpp:1562
#27 0x00007f4d5f42c9c8 in ??? ()
#28 0x000055b5f1131240 in ??? ()
#29 0x0000000000000000 in ??? ()
Comment 3 equeim 2025-07-08 18:48:24 UTC
I've just had the same crash (same backtrace) with Plasma 6.4.2 on openSUSE Tumbleweed. Though in my case in was a RenPy game, and it didn't freeze (I just closed it with Alt+F4). It also uses XWayland though. I tried to reproduce it again, but without success.
Comment 4 Nate Graham 2025-08-01 18:40:19 UTC
Looks similar to Bug 500749, but not exactly the same thing.
Comment 5 Nate Graham 2025-08-14 14:57:50 UTC
*** Bug 508245 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2025-10-07 15:49:51 UTC
Sentry says this is currently the #4 most common Plasma crash. Raising priority here.
Comment 7 Nate Graham 2025-10-30 00:03:08 UTC
After fixing some other ones, it's now #3, or #2 if we exclude the current #1 crash which is in 3rd-party code. Raising priority again.
Comment 8 Nate Graham 2025-12-22 17:23:49 UTC
*** Bug 513631 has been marked as a duplicate of this bug. ***
Comment 9 TraceyC 2026-01-09 21:42:15 UTC
I'm not able to reproduce this at the moment in Plasma built from git-master with

1. A  Wine  Ren'py game - force close with kill -9
2. War Thunder from Steam - close with Alt F4
Comment 10 TraceyC 2026-01-09 21:53:51 UTC
other potential reproducers from Sentry

- After closing Kingdom Come Deliverance
- After playing then closing DDNet
- Closing Guild Wars 2 running through Steam (or Stardew Valley, Cities Skylines 2, other games using Proton0
- Closed Linux native Euro Truck Simulator 2 that was started from Steam with "gamemoderun mangohud %command%". I closed ETS2 from the in game menu. 
- right clicking spotify's tray icon after having alt+f4'ed a fullscreened window
Comment 11 Marco Martin 2026-01-21 12:33:26 UTC
This is against plasma 6.4.

this should have been fixed by commit be417b4d3d0f5e6eb3c9c0f492aa031bc0d2d4d8 in plasma-workspace which sanified a lot the proxy model.

reopen only if the same backtrace (not similar symptoms, actually same bactrace in taskgroupingproxymodel) still happens on plasma 6.6 or later