Fix the window mapping again

The idea of the current code is we have:
 - a launcher model
 - a startup model
 - a window model

we then:
 - concatenate these models
 - then filter them
 - then group them
 - then filter some out again in TasksModel

This last part is a bit sketchy. There is a goal that is if a launcher
exists for a window that is showing we should hide the launcher.

It's an unusual pattern for a filter model, when entry B gets inserted,
entry A should get removed.

The current code detects when a launcher is added, then emits
dataChanged in the filter model. Emitting dataChanged in another model
is very weird, we end up recursively getting back into dataChanged
handling from within a call handling dataChanged and the mapping gets
mangled.

Instead lets keep filtering in the filter model and avoid this incorrect
dataChanged to trigger a re-evaluation. We do it directly when the
source changes.

BUG: 506562